Fixed contrast of delete button in user edit page
Fix for Bootstrap v5 and v3

--- a/ckan/public-bs3/base/scss/_bootstrap-variables.scss
+++ b/ckan/public-bs3/base/scss/_bootstrap-variables.scss
@@ -165,8 +165,8 @@ $btn-warning-bg:                 $brand-warning;
 $btn-warning-border:             darken($btn-warning-bg, 5%);
 
 $btn-danger-color:               #fff;
-$btn-danger-bg:                  $brand-danger;
-$btn-danger-border:              darken($btn-danger-bg, 5%);
+$btn-danger-bg:                  darken($brand-danger, 5%);
+$btn-danger-border:              darken($brand-danger, 10%);
 
 $btn-link-disabled-color:        $gray-light;
 
