--- a/ckan/public/base/scss/_custom.scss
+++ b/ckan/public/base/scss/_custom.scss
@@ -6,6 +6,8 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 
 .btn-danger {
     color: $white !important;
+    background-color: darken($red, 5%);
+    border-color: darken($red, 5%);
 }
 
 .btn-light, .btn-default {
